# merkle_patricia_tree

./: .gitignore  Cargo.toml  Makefile  README.md  plot-profile.plt  profile.sh
.github/workflows/: rust.yml
benches/: bench.rs  common.rs  parity.rs  patricia_tree.rs
examples/: calculate-root.rs  hashing.rs  storage-mdbx.rs  storage-sled.rs  storage.rs
external-benches/geth/: bench_test.go
external-benches/paprika-bench/: Program.cs  README.md  paprika-bench.csproj
plots/: plot-bench.plt  plot-profile.plt
proptest-regressions/: lib.txt  util.txt
src/: codec.rs  dump.rs  hashing.rs  lib.rs  nibble.rs  node.rs  nodes.rs  path.rs  util.rs
src/nodes/: branch.rs  extension.rs  leaf.rs
tests/: trietest.rs
